Did random changes I can't remember, But I fixed JNeuralNetwork.java and also successfully trained MNIST dataset without using CCE, but I did fix SoftMax. And created functionality for CNN.