@@ -1,13 +1,17 @@
 package com.mkproductions.jnn.cpu.entity;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.ArrayList;
 import java.util.Random;
 
 public class Matrix {
-    private final ArrayList<ArrayList<Double>> data;
+    private static final Logger log = LoggerFactory.getLogger(Matrix.class);
+    public ArrayList<ArrayList<Double>> data;
 
     public Matrix(int rowCount, int columnCount) {
-        this.data = new ArrayList<>();
+        this(new ArrayList<>());
         for (int row = 0; row < rowCount; row++) {
             this.data.add(row, new ArrayList<>());
             for (int column = 0; column < columnCount; column++)
@@ -26,7 +30,7 @@ public class Matrix {
     }
 
     public Matrix(double[][] data) {
-        this.data = new ArrayList<>();
+        this(new ArrayList<>());
         for (int row = 0; row < data.length; row++) {
             this.data.add(row, new ArrayList<>());
             for (int column = 0; column < data[0].length; column++) {
@@ -51,9 +55,9 @@ public class Matrix {
     }
 
     public static double[] toFlatArray(Matrix matrix) {
-        double[] flatArray = new double[matrix.getRowCount() * matrix.getColumnCount()];
+        double[] flatArray = new double[matrix.getRow() * matrix.getColumnCount()];
         int i = 0;
-        for (int a = 0; a < matrix.getRowCount(); a++) {
+        for (int a = 0; a < matrix.getRow(); a++) {
             for (int b = 0; b < matrix.getColumnCount(); b++) {
                 flatArray[i] = matrix.getEntry(a, b);
                 i++;
@@ -63,15 +67,15 @@ public class Matrix {
     }
 
     public static Matrix matrixMultiplication(Matrix matrix1, Matrix matrix2) {
-        if (matrix1.getColumnCount() != matrix2.getRowCount()) {
-            System.err.println("Matrix1: ");
-            matrix1.printMatrix();
-            System.err.println("Matrix2: ");
-            matrix2.printMatrix();
-            throw new RuntimeException(STR."Matrix multiplication not possible. Cause \{matrix1.getColumnCount()} != \{matrix2.getRowCount()}");
+        if (matrix1.getColumnCount() != matrix2.getRow()) {
+            log.error("Matrix1: \n{}", matrix1);
+            log.error("Matrix2: {}", matrix2);
+
+            throw new IllegalArgumentException("Matrix multiplication not possible. Cause" + matrix1.getColumnCount() + " != " + matrix2.getRow());
         }
-        Matrix result = new Matrix(matrix1.getRowCount(), matrix2.getColumnCount());
-        for (int a = 0; a < result.getRowCount(); a++)
+
+        Matrix result = new Matrix(matrix1.getRow(), matrix2.getColumnCount());
+        for (int a = 0; a < result.getRow(); a++)
             for (int b = 0; b < result.getColumnCount(); b++) {
                 double sum = 0;
                 for (int k = 0; k < matrix1.getColumnCount(); k++)
@@ -81,20 +85,26 @@ public class Matrix {
         return result;
     }
 
-    public static Matrix convolute(Matrix image, Matrix filter) {
+    public static Matrix convolute(Matrix matrix, Matrix filter) {
+        // Input validation
+        if (filter.getRow() > matrix.getRow() || filter.getColumnCount() > matrix.getColumnCount()) {
+            throw new IllegalArgumentException(
+                    "Filter dimensions (" + filter.getRow() + "," + filter.getColumnCount() + " cannot exceed image dimensions(" + matrix.getRow() + "," + matrix.getColumnCount() + ")");
+        }
+
         // Calculating the output shape.
-        int resultRowCount = image.getRowCount() - filter.getRowCount() + 1;
-        int resultColumnCount = image.getColumnCount() - filter.getColumnCount() + 1;
+        int resultRowCount = matrix.getRow() - filter.getRow() + 1;
+        int resultColumnCount = matrix.getColumnCount() - filter.getColumnCount() + 1;
 
         // Creating an empty result of the convolution.
         Matrix resultMatrix = new Matrix(resultRowCount, resultColumnCount);
 
-        for (int a = 0; a < resultMatrix.getRowCount(); a++) {
+        for (int a = 0; a < resultMatrix.getRow(); a++) {
             for (int b = 0; b < resultMatrix.getColumnCount(); b++) {
                 double sum = 0;
-                for (int c = 0; c < filter.getRowCount(); c++) {
+                for (int c = 0; c < filter.getRow(); c++) {
                     for (int d = 0; d < filter.getColumnCount(); d++) {
-                        sum += image.getEntry(a + c, b + d) * filter.getEntry(c, d);
+                        sum += matrix.getEntry(a + c, b + d) * filter.getEntry(c, d);
                     }
                 }
                 resultMatrix.setEntry(a, b, sum);
@@ -113,7 +123,7 @@ public class Matrix {
     }
 
     public static Matrix createFromDiagonalToColumnMatrix(Matrix result) {
-        double[] results = new double[result.getRowCount()];
+        double[] results = new double[result.getRow()];
         for (int a = 0; a < results.length; a++) {
             results[a] = result.getEntry(a, a);
         }
@@ -127,9 +137,17 @@ public class Matrix {
         return Matrix.matrixMapping(matrix, (_, _, value) -> Math.max(Math.min(value, end), start));
     }
 
+    public static Matrix transpose(Matrix matrix) {
+        Matrix result = new Matrix(matrix.getColumnCount(), matrix.getRow());
+        for (int a = 0; a < result.getRow(); a++)
+            for (int b = 0; b < result.getColumnCount(); b++)
+                result.setEntry(a, b, matrix.getEntry(b, a));
+        return result;
+    }
+
     public Matrix transpose() {
-        Matrix result = new Matrix(this.getColumnCount(), this.getRowCount());
-        for (int a = 0; a < result.getRowCount(); a++)
+        Matrix result = new Matrix(this.getColumnCount(), this.getRow());
+        for (int a = 0; a < result.getRow(); a++)
             for (int b = 0; b < result.getColumnCount(); b++)
                 result.setEntry(a, b, this.getEntry(b, a));
         return result;
@@ -137,102 +155,101 @@ public class Matrix {
 
     public void randomize() {
         Random rand = new Random();
-        for (int a = 0; a < this.getRowCount(); a++)
+        for (int a = 0; a < this.getRow(); a++)
             for (int b = 0; b < this.getColumnCount(); b++)
                 this.setEntry(a, b, rand.nextDouble() * 2 - 1);
     }
 
-    public ArrayList<ArrayList<Double>> getData() {
-        return this.data;
-    }
-
     public Matrix copy() {
-        return new Matrix(this.getData());
+        return new Matrix(this.data);
     }
 
     public void add(Matrix matrix) {
-        if (this.getRowCount() != matrix.getRowCount() || this.getColumnCount() != matrix.getColumnCount()) {
-            throw new RuntimeException("Mismatch shape for performing addition operation.");
+        if (this.getRow() != matrix.getRow() || this.getColumnCount() != matrix.getColumnCount()) {
+            throw new IllegalArgumentException("Mismatch shape for performing addition operation.");
         }
-        for (int a = 0; a < this.getRowCount(); a++)
+        for (int a = 0; a < this.getRow(); a++)
             for (int b = 0; b < this.getColumnCount(); b++)
                 this.setEntry(a, b, this.getEntry(a, b) + matrix.getEntry(a, b));
     }
 
     public static Matrix add(Matrix matrix1, Matrix matrix2) {
-        if (matrix1.getRowCount() != matrix2.getRowCount() || matrix1.getColumnCount() != matrix2.getColumnCount()) {
-            throw new RuntimeException("Mismatch shape for performing addition operation.");
+        if (matrix1.getRow() != matrix2.getRow() || matrix1.getColumnCount() != matrix2.getColumnCount()) {
+            throw new IllegalArgumentException("Mismatch shape for performing addition operation.");
         }
         Matrix result = matrix1.copy();
-        for (int a = 0; a < result.getRowCount(); a++)
+        for (int a = 0; a < result.getRow(); a++)
             for (int b = 0; b < result.getColumnCount(); b++)
                 result.setEntry(a, b, matrix1.getEntry(a, b) + matrix2.getEntry(a, b));
         return result;
     }
 
     public void subtract(Matrix matrix) {
-        if (this.getRowCount() != matrix.getRowCount() || this.getColumnCount() != matrix.getColumnCount()) {
-            throw new RuntimeException("Mismatch shape for performing subtraction operation.");
+        if (this.getRow() != matrix.getRow() || this.getColumnCount() != matrix.getColumnCount()) {
+            throw new IllegalArgumentException("Mismatch shape for performing subtraction operation.");
         }
-        for (int a = 0; a < this.getRowCount(); a++)
+        for (int a = 0; a < this.getRow(); a++)
             for (int b = 0; b < this.getColumnCount(); b++)
                 this.setEntry(a, b, this.getEntry(a, b) - matrix.getEntry(a, b));
     }
 
     public static Matrix subtract(Matrix matrix1, Matrix matrix2) {
-        if (matrix1.getRowCount() != matrix2.getRowCount() || matrix1.getColumnCount() != matrix2.getColumnCount()) {
-            throw new RuntimeException("Mismatch shape for performing subtraction operation.");
+        if (matrix1.getRow() != matrix2.getRow() || matrix1.getColumnCount() != matrix2.getColumnCount()) {
+            throw new IllegalArgumentException("Mismatch shape for performing subtraction operation.");
         }
         Matrix result = matrix1.copy();
-        for (int a = 0; a < result.getRowCount(); a++)
+        for (int a = 0; a < result.getRow(); a++)
             for (int b = 0; b < result.getColumnCount(); b++)
                 result.setEntry(a, b, matrix1.getEntry(a, b) - matrix2.getEntry(a, b));
         return result;
     }
 
     public void scalarMultiply(double scale) {
-        for (int a = 0; a < this.getRowCount(); a++)
+        for (int a = 0; a < this.getRow(); a++)
             for (int b = 0; b < this.getColumnCount(); b++)
                 this.setEntry(a, b, this.getEntry(a, b) * scale);
     }
 
     public static Matrix scalarMultiply(Matrix matrix, double scale) {
         Matrix result = matrix.copy();
-        for (int a = 0; a < result.getRowCount(); a++)
+        for (int a = 0; a < result.getRow(); a++)
             for (int b = 0; b < result.getColumnCount(); b++)
                 result.setEntry(a, b, matrix.getEntry(a, b) * scale);
         return result;
     }
 
     public static Matrix elementWiseMultiply(Matrix matrix1, Matrix matrix2) {
-        if (matrix1.getRowCount() != matrix2.getRowCount() || matrix1.getColumnCount() != matrix2.getColumnCount()) {
-            throw new RuntimeException("Mismatch shape for performing Hadamard product.");
+        if (matrix1.getRow() != matrix2.getRow() || matrix1.getColumnCount() != matrix2.getColumnCount()) {
+            log.error("Matrix1: ({}, {}", matrix1.getRow(), matrix1.getColumnCount());
+            log.error("Matrix2: ({}, {}", matrix2.getRow(), matrix2.getColumnCount());
+            throw new IllegalArgumentException(" Mismatch shape for performing Hadamard product.");
         }
+
         Matrix result = matrix1.copy();
-        for (int a = 0; a < result.getRowCount(); a++)
+        for (int a = 0; a < result.getRow(); a++)
             for (int b = 0; b < result.getColumnCount(); b++)
                 result.setEntry(a, b, matrix1.getEntry(a, b) * matrix2.getEntry(a, b));
         return result;
     }
 
     public void elementWiseMultiply(Matrix matrix) {
-        if (this.getRowCount() != matrix.getRowCount() || this.getColumnCount() != matrix.getColumnCount()) {
-            throw new RuntimeException("Mismatch shape for performing  Hadamard product.");
+        if (this.getRow() != matrix.getRow() || this.getColumnCount() != matrix.getColumnCount()) {
+            throw new IllegalArgumentException("Mismatch shape for performing  Hadamard product.");
         }
-        for (int a = 0; a < this.getRowCount(); a++)
+        for (int a = 0; a < this.getRow(); a++)
             for (int b = 0; b < this.getColumnCount(); b++)
                 this.setEntry(a, b, this.getEntry(a, b) * matrix.getEntry(a, b));
     }
 
-    public void matrixMapping(MapAble function) {
-        for (int a = 0; a < this.getRowCount(); a++)
+    public void matrixMapping(MatrixFunctionAble function) {
+        for (int a = 0; a < this.getRow(); a++)
             for (int b = 0; b < this.getColumnCount(); b++)
                 this.setEntry(a, b, function.map(a, b, this.getEntry(a, b)));
     }
 
-    public static Matrix matrixMapping(Matrix matrix, MapAble function) {
+    public static Matrix matrixMapping(Matrix matrix, MatrixFunctionAble function) {
         Matrix result = matrix.copy();
-        for (int a = 0; a < result.getRowCount(); a++)
+        for (int a = 0; a < result.getRow(); a++)
             for (int b = 0; b < result.getColumnCount(); b++)
                 result.setEntry(a, b, function.map(a, b, matrix.getEntry(a, b)));
         return result;
@@ -246,16 +263,12 @@ public class Matrix {
         return this.data.get(row).get(column);
     }
 
-    public int getRowCount() {
+    public int getRow() {
         return data.size();
     }
 
     public int getColumnCount() {
-        return data.get(0).size();
-    }
-
-    public ArrayList<Double> getRowCount(int row) {
-        return this.data.get(row);
+        return data.getFirst().size();
     }
 
     public ArrayList<Double> getColumn(int columnIndex) {
@@ -266,18 +279,15 @@ public class Matrix {
         return column;
     }
 
-    public double[] getRow(int rowIndex) {
-        double[] row = new double[this.getRowCount()];
-        for (int a = 0; a < row.length; a++) {
-            row[a] = this.getEntry(rowIndex, a);
-        }
-        return row;
+    public ArrayList<Double> getRow(int rowIndex) {
+        return new ArrayList<>(this.data.get(rowIndex));
     }
 
-    public void printMatrix() {
+    @Override
+    public String toString() {
         StringBuilder stringBuilder = new StringBuilder();
         stringBuilder.append("\n");
-        for (int a = 0; a < this.getRowCount(); a++) {
+        for (int a = 0; a < this.getRow(); a++) {
             stringBuilder.append("[");
             for (int b = 0; b < this.getColumnCount(); b++) {
                 stringBuilder.append(this.getEntry(a, b));
@@ -285,10 +295,9 @@ public class Matrix {
                     stringBuilder.append(", ");
                 }
             }
-            stringBuilder.append("]");
-            stringBuilder.append("\n");
+            stringBuilder.append("]").append("\n");
         }
-        stringBuilder.append("Matrix rows: ").append(this.getRowCount()).append(" columns: ").append(this.getColumnCount());
-        System.out.println(stringBuilder);
+        stringBuilder.append("Matrix rows: ").append(this.getRow()).append(" columns: ").append(this.getColumnCount());
+        return stringBuilder.toString();
     }
 }
